# udacity-aws-data-engineer-project02

./: .gitignore  README.md
etl-pipeline/: pyproject.toml
etl-pipeline/etl-pipeline/: README.md  create_tables.py  etl.py  sql_queries.py  terraform.tfstate
etl-pipeline/tests/: test_data_warehouse.py
infrastructure/: data.tf  main.tf  output.tf  provider.tf  terraform.tfvars  variables.tf
